# Clario-Complete-Backend

./: .env.backup  .env.docker  .env.example  .gitattributes  .gitignore  .render-build.sh  .vercel-trigger  11_agents_architecture.md  AGENT2_ASSESSMENT.md  AGENT2_COMPLETE_VERIFICATION.md  AGENT2_FRONTEND_ASSESSMENT.md  AGENT2_IMPLEMENTATION_COMPLETE.md  AGENT2_INTEGRATION_FIX.md  AGENT2_TEST_PLAN.md  AGENT2_TEST_RESULTS.md  AGENT2_VERIFICATION_SUCCESS.md  AGENT3_DEPLOYMENT_CHECKLIST.md  AGENT3_INTEGRATION_COMPLETE.md  AGENT3_RECOVERIES_INTEGRATION_VERIFIED.md  AGENT3_VERIFICATION_REPORT.md  AGENT4_VERIFICATION_REPORT.md  AGENT5_ANALYSIS_SUMMARY.md  AGENT_READINESS_ASSESSMENT_50K_CLAIMS.md  AGENT_WIRING_STATUS.md  AGENT_WIRING_STATUS_CURRENT.md  AMAZON_CONNECTION_VERIFICATION.md  AMAZON_CREDENTIALS_CONSISTENCY_FIX.md  AMAZON_CREDENTIALS_QUICK_FIX.md  AMAZON_CREDENTIALS_VERIFICATION.md  AMAZON_OAUTH_REDIRECT_URI_FIX.md  AMAZON_REDIRECT_URI_OPTIONAL.md  AMAZON_SANDBOX_SYNC_ISSUE.md  AMAZON_SPAPI_INTEGRATION_COMPLETE.md  AMAZON_SPAPI_PRODUCTION_ISSUE_ANALYSIS.md  AMAZON_SPAPI_SANDBOX_OAUTH_SETUP.md  AMAZON_TEST_RESULTS_ANALYSIS.md  AMAZON_UNAUTHORIZED_ERROR_ANALYSIS.md  AMAZON_USER_REGISTRATION_FLOW.md  ANALYTICS_MONITORING_COMPLETE.md  API_CONTRACTS.md  (+395 more)
FBA Refund Predictor/FBA Refund Predictor/: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
FBA Refund Predictor/FBA Refund Predictor/docs/: active_learning_plan.md  api_docs.md  benchmarks.md  modeling_strategy.md
FBA Refund Predictor/FBA Refund Predictor/scripts/: data_validation.sh  run_api.sh
(+2169 files in other folders)
