[tool.poetry]
name = "clario-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = "0.24.0"
pydantic = "2.5.3"
pyjwt = "2.8.0"
httpx = "0.25.2"
python-multipart = "0.0.6"
cryptography = "42.0.5"
psycopg2-binary = "2.9.8"
sqlalchemy = "2.0.23"
alembic = "1.13.1"
psutil = "5.9.8"
python-dotenv = "1.0.0"
aiofiles = "23.2.1"
python-jose = "3.3.0"
passlib = "1.7.4"
bcrypt = "4.0.1"
email-validator = "2.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
